--- a/a.css
+++ b/a.css
@@ -3,6 +3,29 @@
     display: block;
     clear: both;
 }
+body{
+    background-color: black;
+    color: white;
+    margin: 0;
+}
+a{  
+    color: inherit;
+    text-decoration: none;
+}
+.topNavBar{
+    padding: 20px 16px 20px 16px;
+}
+.topNavBar .logo{
+    font-family: "Arial Black";
+    font-size: 30px;
+}
+.topNavBar .logo .rs{
+    color: #E8676B;
+    margin-right: 3px;
+}
+.topNavBar .logo .card{
+    color: #9A9DA2;
+}
 .topNavBar>nav>ul{
     list-style: none; 
     padding: 0;
@@ -14,13 +37,13 @@
     margin-right: 17px; 
 }
 .topNavBar>nav>ul>li>a{
-    text-decoration: none;
     color: #b7b7b7;
     display: block;
     font-size: 12px;
     font-weight: bold;
     padding-top: 5px; 
     padding-bottom: 5px; 
+    border-top: 3px solid transparent;
     border-bottom: 3px solid transparent; 
 }
 .topNavBar>nav>ul>li>a:hover{
@@ -28,7 +51,9 @@
 }
 .topNavBar>nav{
     float: right;
+    padding-top: 8px;
+    padding-bottom: 2px; 
 }
-.topNavBar>img{
+.topNavBar>.logo{
     float: left;
 }
