--- a/a.css
+++ b/a.css
@@ -1,59 +1,57 @@
-.clearfix::after{
+.clearfix::after {
     content: '';
     display: block;
     clear: both;
 }
-body{
+body {
     background-color: black;
     color: white;
     margin: 0;
 }
-a{  
+a {
     color: inherit;
     text-decoration: none;
 }
-.topNavBar{
+.topNavBar {
     padding: 20px 16px 20px 16px;
 }
-.topNavBar .logo{
-    font-family: "Arial Black";
+.topNavBar .logo {
+    float: left;
     font-size: 30px;
+    font-family: "Arial black";
 }
-.topNavBar .logo .rs{
+.topNavBar .logo .rs {
     color: #E8676B;
     margin-right: 3px;
 }
-.topNavBar .logo .card{
-    color: #9A9DA2;
+.topNavBar .logo .card {
+    color: #9A9DA2
 }
-.topNavBar>nav>ul{
-    list-style: none; 
+.topNavBar>nav {
+    float: right;
+    padding-top: 8px;
+    padding-bottom: 2px;
+}
+.topNavBar>nav>ul {
+    list-style: none;
     padding: 0;
     margin: 0;
 }
-.topNavBar>nav>ul>li{
+.topNavBar>nav>ul>li {
     float: left;
     margin-left: 17px;
-    margin-right: 17px; 
+    margin-right: 17px;
 }
-.topNavBar>nav>ul>li>a{
-    color: #b7b7b7;
-    display: block;
+.topNavBar>nav>ul>li>a {
     font-size: 12px;
     font-weight: bold;
-    padding-top: 5px; 
-    padding-bottom: 5px; 
+    color: #b7b7b7;
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
     border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent; 
+    border-bottom: 3px solid transparent;
 }
-.topNavBar>nav>ul>li>a:hover{
-    border-bottom: 3px solid #e06567; 
-}
-.topNavBar>nav{
-    float: right;
-    padding-top: 8px;
-    padding-bottom: 2px; 
-}
-.topNavBar>.logo{
-    float: left;
+.topNavBar>nav>ul>li>a:hover {
+    border-bottom: 3px solid #e06567;
 }
