--- a/a.css
+++ b/a.css
@@ -4,15 +4,29 @@
     clear: both;
 }
 body {
-    background-color: black;
-    color: white;
+    background-color: #EFEFEF;
     margin: 0;
 }
 a {
     color: inherit;
     text-decoration: none;
 }
+* {
+    padding: 0;
+    margin: 0;
+}
+hr {
+    height: 0;
+    border: none;
+    border-bottom: 1px solid #dedede;
+}
 .topNavBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.topNavBar>.topNavBar-inner{
     padding: 20px 16px 20px 16px;
 }
 .topNavBar .logo {
@@ -27,22 +41,22 @@ a {
 .topNavBar .logo .card {
     color: #9A9DA2
 }
-.topNavBar>nav {
+.topNavBar nav {
     float: right;
     padding-top: 8px;
     padding-bottom: 2px;
 }
-.topNavBar>nav>ul {
+.topNavBar nav>ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-.topNavBar>nav>ul>li {
+.topNavBar nav>ul>li {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
 }
-.topNavBar>nav>ul>li>a {
+.topNavBar nav>ul>li>a {
     font-size: 12px;
     font-weight: bold;
     color: #b7b7b7;
@@ -52,6 +66,91 @@ a {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
 }
-.topNavBar>nav>ul>li>a:hover {
+.topNavBar nav>ul>li>a:hover {
     border-bottom: 3px solid #e06567;
+}
+.banner {
+    height: 515px;
+    background-position: center center;
+    background-size: cover; 
+}
+.banner .mask{
+    height: 515px;
+    background-color: rgba(0,0,0,0.8);
+}
+.userCard {
+    max-width: 940px;
+    margin: 0 auto;
+    background-color: #FFFFFF;
+}
+.userCard .text .welcome {
+    position: relative;
+    background-color: #E8676B;
+    color: white;
+    padding: 4px 16px;
+    display: inline-block;
+    line-height: 22px;
+}
+.userCard .text .welcome .triangle {
+    position: absolute;
+    top: 100%;
+    left: 5px;
+    display: block;
+    border: 10px solid transparent;
+    width: 0;
+    border-left-color: #E8676B;
+    border-top-width: 0; 
+}
+.userCard .textAndPicture{
+    padding: 50px;
+}
+.userCard .textAndPicture .picture {
+    float: left;
+}
+.userCard .textAndPicture .text {
+    float: left;
+    margin-left: 62px;
+    width: 480px;
+}
+.userCard .textAndPicture .text h1 {
+    margin-top: 35px;
+    margin-bottom: 16px;
+}
+.userCard .textAndPicture .text hr {
+    margin: 20px 0; 
+}
+.userCard dl dt,
+.userCard dl dd{
+    float: left;
+    padding: 8px 0;
+}
+.userCard dl dt{
+    font-weight: bold;
+    width: 30%;
+} 
+.userCard dl dd{
+    color: #9DA0A7;
+    float: left;
+    width: 70%;
+} 
+.userCard footer{
+    background-color: #E8676B;
+    text-align: center;
+}
+.userCard>footer>a{
+    display: inline-block;
+    width: 50px;
+    line-height: 30px;
+    padding: 10px 0;
+    margin: 16px;
+    border-radius: 50%;
+}
+.userCard>footer>a:hover{
+    background-color: #D05C60;
+}
+.userCard svg{
+    width: 30px;
+    height: 30px;
+    fill: white;
+    vertical-align: top;
 }
