--- a/a.css
+++ b/a.css
@@ -20,6 +20,12 @@ hr {
     border: none;
     border-bottom: 1px solid #dedede;
 }
+ul,ol{
+    list-style: none;
+}
+h1,h2,h3,h4,h5,h6{
+    font-weight: normal;
+}
 main {
     margin-top: -345px; 
 }
@@ -50,7 +56,6 @@ main {
     padding-bottom: 2px;
 }
 .topNavBar nav>ul {
-    list-style: none;
     padding: 0;
     margin: 0;
 }
@@ -134,7 +139,6 @@ main {
 } 
 .userCard dl dd{
     color: #9DA0A7;
-    float: left;
     width: 70%;
 } 
 .userCard footer{
@@ -178,4 +182,45 @@ body>main .selfIntroduction{
     max-width: 940px;
     margin: 0 auto;
     line-height: 30px;
+}
+section.skills{
+    max-width: 940px;
+    margin: 0 auto;
+}
+section.skills ol{
+    background-color: white;
+    box-shadow: 2px 3px 8px -1px rgba(0,0,0,0.75);
+    padding: 50px 50px 0 50px;
+    margin-top: 30px;
+}
+section.skills ol li{
+    float: left;
+    width: 48%;
+    margin-bottom: 43px;
+    box-sizing: border-box;
+}
+section.skills ol li:nth-child(even){
+    float: right;
+}
+section.skills ol li .progressBar{
+    height: 5px;
+    background-color: #FAE1E1; 
+}
+section.skills ol li .progress{
+    height: 100%;
+    width: 70%;
+    background-color: #E8676B;
+}
+section.skills h3{
+    margin-bottom: 5px;
+    color: #3d4451;
+    font-size: 14px;
+}
+section.skills>h2{
+    color: #3d4451;
+    font-size: 34px;
+    line-height: 1.2;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 75px; 
 }
