--- a/main.css
+++ b/main.css
@@ -3,32 +3,46 @@
     display: block;
     clear: both;
 }
+
 body {
     background-color: #EFEFEF;
     margin: 0;
 }
+
 a {
     color: inherit;
     text-decoration: none;
 }
+
 * {
     padding: 0;
     margin: 0;
 }
+
 hr {
     height: 0;
     border: none;
     border-bottom: 1px solid #dedede;
 }
-ul,ol{
+
+ul,
+ol {
     list-style: none;
 }
-h1,h2,h3,h4,h5,h6{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: normal;
 }
+
 main {
-    margin-top: -345px; 
+    margin-top: -345px;
 }
+
 .topNavBar {
     color: #b7b7b7;
     position: fixed;
@@ -37,45 +51,55 @@ main {
     width: 100%;
     transition: all 1s;
 }
-.topNavBar.stick{
+
+.topNavBar.stick {
     background: #FEFEFE;
     z-index: 1;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.19), 0 6px 10px rgba(0, 0, 0, 0.23);
     color: #3d4451;
 }
-.topNavBar.stick>.topNavBar-inner{
+
+.topNavBar.stick>.topNavBar-inner {
     padding: 8px 16px;
 }
-.topNavBar>.topNavBar-inner{
+
+.topNavBar>.topNavBar-inner {
     padding: 15px 16px 15px 16px;
 }
+
 .topNavBar .logo {
     float: left;
     font-size: 30px;
     font-family: "Arial black";
 }
+
 .topNavBar .logo .rs {
     color: #E8676B;
     margin-right: 3px;
 }
+
 .topNavBar .logo .card {
     color: #9A9DA2
 }
+
 .topNavBar nav {
     float: right;
     padding-top: 8px;
     padding-bottom: 2px;
 }
+
 .topNavBar nav>ul {
     padding: 0;
     margin: 0;
 }
+
 .topNavBar nav>ul>li {
     float: left;
     margin-left: 17px;
     margin-right: 17px;
     position: relative;
 }
+
 .topNavBar nav>ul>li>a {
     font-size: 12px;
     font-weight: bold;
@@ -86,7 +110,9 @@ main {
     position: relative;
     cursor: pointer;
 }
-.topNavBar nav>ul>li.active a::after,.topNavBar nav>ul>li.highLight a::after{
+
+.topNavBar nav>ul>li.active a::after,
+.topNavBar nav>ul>li.highLight a::after {
     content: '';
     display: block;
     position: absolute;
@@ -97,24 +123,28 @@ main {
     height: 3px;
     animation: menuSlide .3s;
 }
-@keyframes menuSlide{
-    0%{
+
+@keyframes menuSlide {
+    0% {
         width: 0;
     }
-    100%{
+    100% {
         width: 100%;
     }
 }
-[data-x]{
+
+[data-x] {
     transform: translateY(0);
     opacity: 1;
     transition: all 0.5s;
 }
-[data-x].offset{
+
+[data-x].offset {
     transform: translateY(50px);
     opacity: 0.6;
 }
-.topNavBar .submenu{
+
+.topNavBar .submenu {
     display: none;
     position: absolute;
     top: calc(100% + 3px);
@@ -123,43 +153,51 @@ main {
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
     background: #FFFFFF;
 }
-.topNavBar .submenu>li{
+
+.topNavBar .submenu>li {
     padding: 10px 20px;
     color: black;
     cursor: pointer;
 }
-.topNavBar .submenu>li:hover{
+
+.topNavBar .submenu>li:hover {
     color: red;
 }
-.topNavBar li.active .submenu{
+
+.topNavBar li.active .submenu {
     display: block;
     animation: subMenu .3s;
 }
-@keyframes subMenu{
-    0%{
+
+@keyframes subMenu {
+    0% {
         margin-right: 30%;
         opacity: 0;
     }
-    100%{
+    100% {
         margin-right: 0%;
         opacity: 1;
     }
 }
+
 .banner {
     height: 515px;
     background-position: center center;
-    background-size: cover; 
+    background-size: cover;
 }
-.banner .mask{
+
+.banner .mask {
     height: 515px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
 .userCard {
     max-width: 940px;
     margin: 0 auto;
     background-color: #FFFFFF;
-    box-shadow: 2px 3px 8px -2px rgba(0,0,0,0.75);
+    box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.75);
 }
+
 .userCard .text .welcome {
     position: relative;
     background-color: #E8676B;
@@ -168,6 +206,7 @@ main {
     display: inline-block;
     line-height: 22px;
 }
+
 .userCard .text .welcome .triangle {
     position: absolute;
     top: 100%;
@@ -176,44 +215,54 @@ main {
     border: 10px solid transparent;
     width: 0;
     border-left-color: #E8676B;
-    border-top-width: 0; 
+    border-top-width: 0;
 }
-.userCard .textAndPicture{
+
+.userCard .textAndPicture {
     padding: 50px;
 }
+
 .userCard .textAndPicture .picture {
     float: left;
 }
+
 .userCard .textAndPicture .text {
     float: left;
     margin-left: 62px;
     width: 480px;
 }
+
 .userCard .textAndPicture .text h1 {
     margin-top: 35px;
     margin-bottom: 16px;
 }
+
 .userCard .textAndPicture .text hr {
-    margin: 20px 0; 
+    margin: 20px 0;
 }
+
 .userCard dl dt,
-.userCard dl dd{
+.userCard dl dd {
     float: left;
     padding: 8px 0;
 }
-.userCard dl dt{
+
+.userCard dl dt {
     font-weight: bold;
     width: 30%;
-} 
-.userCard dl dd{
+}
+
+.userCard dl dd {
     color: #9DA0A7;
     width: 70%;
-} 
-.userCard footer{
+}
+
+.userCard footer {
     background-color: #E8676B;
     text-align: center;
 }
-.userCard>footer>a{
+
+.userCard>footer>a {
     display: inline-block;
     width: 50px;
     line-height: 30px;
@@ -221,16 +270,19 @@ main {
     margin: 16px;
     border-radius: 50%;
 }
-.userCard>footer>a:hover{
+
+.userCard>footer>a:hover {
     background-color: #D05C60;
 }
-.userCard svg{
+
+.userCard svg {
     width: 30px;
     height: 30px;
     fill: white;
     vertical-align: top;
 }
-body>main .downloadResume{
+
+body>main .downloadResume {
     display: inline-block;
     padding: 21px 55px;
     border: 1px solid #CDCFD1;
@@ -239,130 +291,151 @@ body>main .downloadResume{
     font-weight: bold;
     transition: box-shadow 0.5s;
 }
-body>main .downloadResume:hover{
-    box-shadow: 2px 3px 8px -1px rgba(0,0,0,0.75);
+
+body>main .downloadResume:hover {
+    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);
 }
-body>main .downloadResumeWrapper{
+
+body>main .downloadResumeWrapper {
     text-align: center;
 }
-body>main .selfIntroduction{
+
+body>main .selfIntroduction {
     text-align: center;
     max-width: 940px;
     margin: 0 auto;
     line-height: 30px;
 }
-section.skills{
+
+section.skills {
     max-width: 940px;
     margin: 0 auto;
 }
-section.skills ol{
+
+section.skills ol {
     background-color: white;
-    box-shadow: 2px 3px 8px -1px rgba(0,0,0,0.75);
+    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);
     padding: 50px 50px 0 50px;
     margin-top: 30px;
 }
-section.skills ol li{
+
+section.skills ol li {
     float: left;
     width: 48%;
     margin-bottom: 43px;
     box-sizing: border-box;
 }
-section.skills ol li:nth-child(even){
+
+section.skills ol li:nth-child(even) {
     float: right;
 }
-section.skills ol li .progressBar{
+
+section.skills ol li .progressBar {
     height: 5px;
     background-color: #FAE1E1;
-    overflow: hidden; 
+    overflow: hidden;
 }
-section.skills ol li .progress{
+
+section.skills ol li .progress {
     height: 100%;
     background-color: #E8676B;
     transform: translateX(0);
     transition: all 1s;
 }
-section.skills.offset ol li .progress{
-    transform: translateX(-100%); 
+
+section.skills.offset ol li .progress {
+    transform: translateX(-100%);
 }
-section.skills h3{
+
+section.skills h3 {
     margin-bottom: 5px;
     color: #3d4451;
     font-size: 14px;
 }
-section.skills>h2{
+
+section.skills>h2,
+section.portfolio>h2,
+section.messageBoard>h2 {
     color: #3d4451;
     font-size: 34px;
     line-height: 1.2;
     font-weight: 600;
     text-align: center;
-    margin-top: 75px; 
-}
-section.portfolio{
-    max-width: 940px;
-    margin: 0 auto;
-    margin-bottom: 100px;
-    text-align: center;
-}
-section.portfolio>h2{
-    color: #3d4451;
-    font-size: 34px;
-    line-height: 1.2;
-    font-weight: 600;
-    text-align: center;
-    margin-top: 75px; 
-}
-section.portfolio nav{
-    margin-top: 30px;
-    display: inline-block;
-    vertical-align: top;
-}
-section.portfolio nav ol{
-    display: inline-block;
-    vertical-align: top;
-}
-section.portfolio nav ol li{
-    float: left;
-    margin-left: 30px;
-    cursor: pointer;
-}
-section.portfolio nav ol li:first-child{
-    margin-left: 0px;
-}
-section.portfolio nav .bar{
-    margin-top: 15px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: white;
-}
-section.portfolio nav .bar-inner{
-    height: 100%;
-    border-radius: 5px;
-    background-color: #E8676B;
-    transition: all 0.5s;
-}
-section.portfolio nav .bar.state1 .bar-inner{
-    width: 38px;
-    margin-left: 0;
-}
-section.portfolio nav .bar.state2 .bar-inner{
-    width: 50px;
-    margin-left: 55px;
-}
-section.portfolio nav .bar.state3 .bar-inner{
-    width: 94px;
-    margin-left: 121px;
-}
-section.portfolio .works{
-    position: relative;
-    height: 575px;
-    margin-top: 30px;
-}
-section.portfolio .works .big,
-section.portfolio .works .small{
-    position: absolute;
-}
-section.portfolio .works .big{
-    top: 0;
-    left: 0;
+    margin-top: 75px;
 }
 
+section.portfolio {
+    max-width: 940px;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+}
+section.portfolio>.swiper-container {
+    margin-top: 30px;
+}
+
+section.portfolio>.swiper-button-prev,
+section.portfolio>.swiper-button-next {
+    position: absolute;
+    background-color: white;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    left: 103%;
+    right: auto;
+}
+
+section.portfolio>.swiper-button-prev {
+    right: 103%;
+    left: auto;
+}
+
+section.messageBoard {
+    max-width: 940px;
+    margin: 0 auto;
+}
+section.messageBoard .loadMessages{
+    margin-top: 30px;
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.75);
+    background-color: #F4F4F4;
+}
+section.messageBoard ol {
+    margin: 0 auto;
+    border-top: 1px solid black;
+}
+
+section.messageBoard ol li {
+    padding: 16px;
+    border-bottom: 1px solid black;
+}
+
+section.messageBoard>form {
+}
+
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+
+.swiper-container {
+    width: 940px;
+    height: 705px;
+    border-radius: 10px;
+    box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.75);
+}
+
+.swiper-slide {
+    width: 940px;
+    height: 705px;
+    background-color: white;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    outline: none;
+}
