--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #EFEFEF;
-    margin: 0;
+    min-width: 940px;
 }
 
 a {
@@ -44,6 +44,9 @@ main {
 }
 
 .topNavBar {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     color: #b7b7b7;
     position: fixed;
     top: 0;
@@ -60,22 +63,20 @@ main {
 }
 
 .topNavBar.stick>.topNavBar-inner {
-    padding: 8px 16px;
+    padding: 8px 13px;
 }
 
 .topNavBar>.topNavBar-inner {
-    padding: 15px 16px 15px 16px;
+    padding: 15px 13px 15px 13px;
 }
 
 .topNavBar .logo {
-    float: left;
     font-size: 30px;
     font-family: "Arial black";
 }
 
 .topNavBar .logo .rs {
     color: #E8676B;
-    margin-right: 3px;
 }
 
 .topNavBar .logo .card {
@@ -83,7 +84,6 @@ main {
 }
 
 .topNavBar nav {
-    float: right;
     padding-top: 8px;
     padding-bottom: 2px;
 }
@@ -314,7 +314,7 @@ section.skills {
 
 section.skills ol {
     background-color: white;
-    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);    
     padding: 50px 50px 0 50px;
     margin-top: 30px;
 }
@@ -322,8 +322,14 @@ section.skills ol {
 section.skills ol li {
     float: left;
     width: 48%;
-    margin-bottom: 43px;
+    height: 100px;
+    padding-top: 33px;
+    padding-left: 35px;
+    padding-right: 4px;
     box-sizing: border-box;
+    border-radius: 5px;
+    margin-bottom: 34px;
+    box-shadow: 1px 1px 5px -1px rgba(0,0,0,0.75);
 }
 
 section.skills ol li:nth-child(even) {
@@ -333,29 +339,31 @@ section.skills ol li:nth-child(even) {
 section.skills ol li .progressBar {
     height: 5px;
     background-color: #FAE1E1;
-    overflow: hidden;
 }
 
 section.skills ol li .progress {
     height: 100%;
     background-color: #E8676B;
-    transform: translateX(0);
-    transition: all 1s;
 }
 
-section.skills.offset ol li .progress {
-    transform: translateX(-100%);
-}
 
 section.skills h3 {
     margin-bottom: 5px;
-    color: #3d4451;
+    color: #607C8B;
     font-size: 14px;
+    line-height: 14px;
+}
+section.skills ol li p{
+    color: #A9B7C0;
+    font-size: 12px;
+    line-height: 12px;
 }
 
 section.skills>h2,
 section.portfolio>h2,
 section.messageBoard>h2 {
+    display: flex;
+    justify-content: center;
     color: #3d4451;
     font-size: 34px;
     line-height: 1.2;
@@ -365,40 +373,32 @@ section.messageBoard>h2 {
 }
 
 section.portfolio {
-    max-width: 940px;
+    max-width: 1250px;
     margin: 0 auto;
-    text-align: center;
     position: relative;
 }
-section.portfolio>.swiper-container {
+section.portfolio ol {
     margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-
-section.portfolio>.swiper-button-prev,
-section.portfolio>.swiper-button-next {
-    position: absolute;
-    background-color: white;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    left: 103%;
-    right: auto;
+section.portfolio .works ol li img{
+    width: 400px;
+    height: 300px;
+    border: 2px solid #DBCBD4;
+    border-radius: 15px; 
 }
-
-section.portfolio>.swiper-button-prev {
-    right: 103%;
-    left: auto;
-}
-
 section.messageBoard {
     max-width: 940px;
     margin: 0 auto;
+    margin-bottom: 30px;
 }
 section.messageBoard .loadMessages{
     margin-top: 30px;
     padding: 10px;
     border-radius: 20px;
-    box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);    
     background-color: #F4F4F4;
 }
 section.messageBoard ol {
@@ -408,7 +408,14 @@ section.messageBoard ol {
 
 section.messageBoard ol li {
     padding: 16px;
-    border-bottom: 1px solid black;
+    padding-top: 30px;
+    border-bottom: 1px solid #D9DDE1;
+}
+section.messageBoard ol li span{
+    display: block;
+    color: #93999F;
+    margin-top: 23px;
+    font-size: 12px;
 }
 
 .icon {
@@ -423,7 +430,7 @@ section.messageBoard ol li {
     width: 940px;
     height: 705px;
     border-radius: 10px;
-    box-shadow: 2px 3px 8px -2px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 3px 8px -1px rgba(0, 0, 0, 0.75);
 }
 
 .swiper-slide {
@@ -435,4 +442,45 @@ section.messageBoard ol li {
 .swiper-button-prev,
 .swiper-button-next {
     outline: none;
+}
+#messageForm label{
+    display: flex;
+    padding: 15px;
+    width: 100%;
+}
+#messageForm label span{
+    margin-right: 10px;
+}
+#inputName{
+    width: 200px;
+    height: 25px;
+    font-size: 20px;
+    border-radius: 2px; 
+    border: 1px solid #b7bbbf;
+    background-color: #fff;
+}
+#inputContent{
+    resize: none;
+    color: #555555;
+    width: 715px;
+    height: 96px;
+    padding: 8px 10px;
+    border-radius: 2px; 
+    border: 1px solid #b7bbbf;
+    background-color: #fff;
+}
+#submitButton{
+    margin-right: 122px;
+    margin-top: 27px;
+    float: right;
+    background-color: #00b33b;
+    padding: 12px;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 2px;
+    outline: none;
+    border: none;
+}
+#submitButton:hover{
+    background-color: #33A646;
 }
